CREATE TABLE "event" (
  "event_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "description" text,
  "date" date,
  "address_id" int
);

ALTER TABLE "event" ADD FOREIGN KEY ("address_id") REFERENCES "address" ("address_id");

CREATE TABLE "address" (
  "address_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "postal_code" varchar,
  "region_code" varchar,
  "administrative_area" varchar,
  "locality" varchar,
  "sublocality" varchar,
  "address_line" varchar
);

CREATE TABLE "user" (
  "user_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "cpf" varchar,
  "phone" varchar
);

CREATE TABLE "professional" (
  "professional_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar,
  "phone" varchar,
  "specialty" varchar
);

CREATE TABLE "session" (
  "session_id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "datetime" timestamp,
  "status" varchar,
  "method" varchar,
  "link_web" varchar,
  "link_phone" varchar,
  "user_id" int,
  "professional_id" int,
  "event_id" int
);

ALTER TABLE "session" ADD FOREIGN KEY ("user_id") REFERENCES "user" ("user_id");

ALTER TABLE "session" ADD FOREIGN KEY ("professional_id") REFERENCES "professional" ("professional_id");

ALTER TABLE "session" ADD FOREIGN KEY ("event_id") REFERENCES "event" ("event_id");
